test/tests/errors/error-class-inherit-no-override-private2.sm
// true
// false
// false
/**/
/**/

program {
    class A {
        private var x: int = 1;
    }

    class B extends A {
        public var x: int = 1;
    }
}